--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "nuxt": "^3.10.2",
+    "surrealdb.js": "^0.11.0",
     "vue": "^3.4.19",
     "vue-router": "^4.2.5"
   }
